--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "timeflow-pomodoro",
+  "name": "focus-timeflow",
   "private": true,
   "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "db:setup": "node scripts/setup-db.js"
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "@vercel/postgres": "^0.5.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
