refactor: Rename TimeFlow to FOCUS in manifest.json

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "TimeFlow - Focus & Productivity",
-  "short_name": "TimeFlow",
+  "name": "FOCUS - Time Blocking & Productivity",
+  "short_name": "FOCUS",
   "description": "Master your day with focused time blocking and Pomodoro timer",
   "start_url": "/",
   "display": "standalone",
