--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,36 +1,57 @@
 {
-  "name": "FOCUS - Time Blocking & Productivity",
+  "name": "FOCUS - Time Blocking & Pomodoro",
   "short_name": "FOCUS",
-  "description": "Master your day with focused time blocking and Pomodoro timer",
+  "description": "Master your day with focused time blocking and Pomodoro timer. Real-time sync across all devices.",
   "start_url": "/",
   "display": "standalone",
-  "orientation": "portrait",
-  "theme_color": "#FF6B6B",
   "background_color": "#0f0f1a",
+  "theme_color": "#FF6B6B",
+  "orientation": "portrait-primary",
+  "scope": "/",
+  "lang": "en-US",
   "categories": ["productivity", "utilities"],
   "icons": [
-    { "src": "/icon.svg", "sizes": "any", "type": "image/svg+xml", "purpose": "any" },
-    { "src": "/icons/icon-192x192.png", "sizes": "192x192", "type": "image/png" },
-    { "src": "/icons/icon-512x512.png", "sizes": "512x512", "type": "image/png" },
-    { "src": "/icons/icon-512x512.png", "sizes": "512x512", "type": "image/png", "purpose": "maskable" }
+    { "src": "/icons/icon-72.png", "sizes": "72x72", "type": "image/png" },
+    { "src": "/icons/icon-96.png", "sizes": "96x96", "type": "image/png" },
+    { "src": "/icons/icon-128.png", "sizes": "128x128", "type": "image/png" },
+    { "src": "/icons/icon-144.png", "sizes": "144x144", "type": "image/png" },
+    { "src": "/icons/icon-152.png", "sizes": "152x152", "type": "image/png" },
+    { "src": "/icons/icon-192.png", "sizes": "192x192", "type": "image/png", "purpose": "any maskable" },
+    { "src": "/icons/icon-384.png", "sizes": "384x384", "type": "image/png" },
+    { "src": "/icons/icon-512.png", "sizes": "512x512", "type": "image/png", "purpose": "any maskable" }
   ],
   "shortcuts": [
     {
-      "name": "Start Pomodoro",
-      "short_name": "Pomodoro",
+      "name": "Start Focus Session",
+      "short_name": "Focus",
       "description": "Start a 25-minute focus session",
-      "url": "/?action=pomodoro",
-      "icons": [{ "src": "/icon.svg", "sizes": "96x96" }]
+      "url": "/?action=start-focus",
+      "icons": [{ "src": "/icons/shortcut-focus.png", "sizes": "96x96" }]
     },
     {
-      "name": "View Analytics",
+      "name": "Quick Break",
+      "short_name": "Break",
+      "description": "Start a 5-minute break",
+      "url": "/?action=start-break",
+      "icons": [{ "src": "/icons/shortcut-break.png", "sizes": "96x96" }]
+    },
+    {
+      "name": "View Schedule",
+      "short_name": "Schedule",
+      "description": "View today's time blocks",
+      "url": "/?view=day",
+      "icons": [{ "src": "/icons/shortcut-schedule.png", "sizes": "96x96" }]
+    },
+    {
+      "name": "Analytics",
       "short_name": "Stats",
-      "description": "View your productivity stats",
+      "description": "View productivity analytics",
       "url": "/?view=analytics",
-      "icons": [{ "src": "/icon.svg", "sizes": "96x96" }]
+      "icons": [{ "src": "/icons/shortcut-analytics.png", "sizes": "96x96" }]
     }
   ],
-  "screenshots": [
-    { "src": "/icon.svg", "sizes": "1080x1920", "type": "image/svg+xml", "form_factor": "narrow" }
-  ]
+  "related_applications": [],
+  "prefer_related_applications": false,
+  "launch_handler": { "client_mode": "navigate-existing" },
+  "protocol_handlers": [{ "protocol": "web+focus", "url": "/?action=%s" }]
 }
