--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,13 @@
 # Supabase Configuration
-# Get these from your Supabase project settings > API
-VITE_SUPABASE_URL=https://your-project.supabase.co
-VITE_SUPABASE_ANON_KEY=your-anon-key-here
+VITE_SUPABASE_URL=your_supabase_url
+VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
+
+# AI Configuration (Gemini)
+VITE_GEMINI_API_KEY=your_gemini_api_key
+
+# Google Calendar Configuration
+VITE_GOOGLE_API_KEY=your_google_api_key
+VITE_GOOGLE_CLIENT_ID=your_google_client_id
+
+# Optional: Analytics
+VITE_GA_TRACKING_ID=your_google_analytics_id
