--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,56 +4,26 @@
   "description": "Time blocking app with Pomodoro timer, AI insights, and focus sounds",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#0f0f1a",
-  "theme_color": "#4F46E5",
+  "background_color": "#000000",
+  "theme_color": "#007AFF",
   "orientation": "any",
   "icons": [
     {
-      "src": "/focus-icon-72.png",
-      "sizes": "72x72",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "src": "/icon.svg",
+      "sizes": "any",
+      "type": "image/svg+xml",
+      "purpose": "any"
     },
     {
-      "src": "/focus-icon-96.png",
-      "sizes": "96x96",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "/focus-icon-128.png",
-      "sizes": "128x128",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "/focus-icon-144.png",
-      "sizes": "144x144",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "/focus-icon-152.png",
-      "sizes": "152x152",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "/focus-icon-192.png",
+      "src": "/icon.svg",
       "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "type": "image/svg+xml",
+      "purpose": "maskable"
     },
     {
-      "src": "/focus-icon-384.png",
-      "sizes": "384x384",
-      "type": "image/png",
-      "purpose": "any maskable"
-    },
-    {
-      "src": "/focus-icon-512.png",
+      "src": "/icon.svg",
       "sizes": "512x512",
-      "type": "image/png",
+      "type": "image/svg+xml",
       "purpose": "any maskable"
     }
   ],
@@ -63,31 +33,13 @@
       "name": "Quick Timer",
       "short_name": "Timer",
       "description": "Start a quick 25-minute focus session",
-      "url": "/?quick=25",
-      "icons": [{ "src": "/timer-icon.png", "sizes": "96x96" }]
+      "url": "/?quick=25"
     },
     {
       "name": "Add Block",
       "short_name": "Add",
       "description": "Add a new focus block",
-      "url": "/?action=add",
-      "icons": [{ "src": "/add-icon.png", "sizes": "96x96" }]
-    }
-  ],
-  "screenshots": [
-    {
-      "src": "/screenshot-wide.png",
-      "sizes": "1280x720",
-      "type": "image/png",
-      "form_factor": "wide",
-      "label": "FOCUS Desktop View"
-    },
-    {
-      "src": "/screenshot-mobile.png",
-      "sizes": "750x1334",
-      "type": "image/png",
-      "form_factor": "narrow",
-      "label": "FOCUS Mobile View"
+      "url": "/?action=add"
     }
   ],
   "share_target": {
@@ -100,12 +52,6 @@
       "url": "url"
     }
   },
-  "protocol_handlers": [
-    {
-      "protocol": "web+focus",
-      "url": "/handle?type=%s"
-    }
-  ],
   "related_applications": [],
   "prefer_related_applications": false
 }
